--- a/styles/components.css
+++ b/styles/components.css
@@ -17,13 +17,13 @@
 body{
     font-weight: 400;
     line-height: 1.5;
-    background-color: #FCFBFC;   
+    background-color: #f0f2f5;   
 }
-h1,h2,h3,h4,h5{
+h1,h2,h3,h4,h5,h6{
     font-weight: 700;
     line-height: 1.3;
     letter-spacing: 0px;
-    color: whitesmoke;
+    color: black;
 }
 h1 {
     font-size: clamp(28px, 5vw, 62px); 
@@ -82,7 +82,7 @@ label{
 }
 .paragraph-effect{
     font-weight: 200; 
-    color: #cfcfcf; 
+    color: b; 
     letter-spacing: 1px;
     line-height: 1.3;
     color: rgba(255, 255, 255, 0.6);
@@ -229,7 +229,7 @@ label{
 }  
 .navbars{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     gap: 2rem;
     padding: 10px;
