--- a/styles/components.css
+++ b/styles/components.css
@@ -26,7 +26,7 @@ h1,h2,h3,h4,h5,h6{
     color: black;
 }
 h1 {
-    font-size: clamp(28px, 5vw, 62px); 
+    font-size: clamp(18px, 5vw, 62px); 
     letter-spacing: -1.7px;
 }
 h2 {
@@ -48,7 +48,7 @@ h5 {
 
 p {
     font-size: clamp(12px, 2vw, 20px);
-    color: whitesmoke;
+    color: black;
 }
 a{
     font-size: clamp(8px, 2vw, 16px);
@@ -82,7 +82,7 @@ label{
 }
 .paragraph-effect{
     font-weight: 200; 
-    color: b; 
+    color: black; 
     letter-spacing: 1px;
     line-height: 1.3;
     color: rgba(255, 255, 255, 0.6);
@@ -226,7 +226,26 @@ label{
   inset 1px 1px 5px rgba(255, 255, 255, 0.1),
   5px 5px 20px rgba(100, 52, 248, 0.2);
     background-color: #6434F8;
-}  
+}
+.top-navbar {
+  background-color: #413d62;
+  display: flex;
+  justify-content: center;
+  border-bottom-right-radius: 30px;
+  border-bottom-left-radius: 30px;
+  color: #aaa;
+}
+.nav-links a {
+  font-size: 18px;
+}
+
+
+.nav-links a:hover {
+  color: white;
+  transform: scale(1.1);
+  transition: transform 0.3s ease-in-out;
+}
+
 .navbars{
     display: flex;
     justify-content: space-between;
