--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,7 @@
   font-size: 36px;
   font-weight: 700;
   text-align: center;
-  color: #2e2e3a;
+  color: #1F5EFF;
   margin-bottom: 10px;
   letter-spacing: 1px;
   position: relative;
