--- a/styles/components.css
+++ b/styles/components.css
@@ -23,7 +23,7 @@ h1,h2,h3,h4,h5,h6{
     font-weight: 700;
     line-height: 1.3;
     letter-spacing: 0px;
-    color: black;
+    color: #1F5EFF;
 }
 h1 {
     font-size: clamp(18px, 5vw, 62px); 
@@ -48,7 +48,7 @@ h5 {
 
 p {
     font-size: clamp(12px, 2vw, 20px);
-    color: black;
+    color: #1F5EFF;
 }
 a{
     font-size: clamp(8px, 2vw, 16px);
@@ -64,11 +64,11 @@ ul{
 }
 
 label{
-    color: whitesmoke;
+    color: #1F5EFF;
 }
 
 .black-div{
-    background-color: black;
+    background-color: #1F5EFF;
 }
 /* --------------- Text --------------- */
 .highlight {
@@ -281,7 +281,9 @@ label{
 .links:hover {
     color: #1F5EFF;
 }
-
+.active{
+    color:#4F7FFF;
+}
 .links:hover::after {
     width: 100%;
     left: 50%;
