--- a/styles/components.css
+++ b/styles/components.css
@@ -23,7 +23,7 @@ h1,h2,h3,h4,h5,h6{
     font-weight: 700;
     line-height: 1.3;
     letter-spacing: 0px;
-    color: #1F5EFF;
+    color: black;
 }
 h1 {
     font-size: clamp(18px, 5vw, 62px); 
@@ -103,7 +103,7 @@ label{
 
 
 /* --------------- btns --------------- */
-.btn-primary {
+/* .btn-primary {
     padding: 6px 8px;
     border: 1px solid transparent; 
     border-radius: 18px;
@@ -122,7 +122,7 @@ label{
     transform: scale(1.07);
     
 }
-
+ */
 
 .btn-outline {
     padding: 6px 8px;
@@ -215,20 +215,9 @@ label{
 }
 
 /*-----NAVBAR SECTION-----*/
-.NAVBR-SECTION{
-    margin-bottom: 150px;
-    width: 100%;
-    border-bottom: 1px solid #333333;
-    border-bottom-left-radius: 100px;
-    border-bottom-right-radius: 100px;
-    backdrop-filter: blur(50px); 
-    box-shadow:
-  inset 1px 1px 5px rgba(255, 255, 255, 0.1),
-  5px 5px 20px rgba(100, 52, 248, 0.2);
-    background-color: #6434F8;
-}
+
 .top-navbar {
-  background-color: #413d62;
+   background-color: #413d62;
   display: flex;
   justify-content: center;
   border-bottom-right-radius: 30px;
@@ -238,8 +227,6 @@ label{
 .nav-links a {
   font-size: 18px;
 }
-
-
 .nav-links a:hover {
   color: white;
   transform: scale(1.1);
@@ -255,9 +242,7 @@ label{
     margin: 0 auto;
 }
 
-#menu-btn{
-    display: none;
-}
+
 .links {
     position: relative;
     color: whitesmoke;
@@ -267,6 +252,7 @@ label{
     font-weight: 600;
     transition: color 0.5s ease-in-out;
 }
+
 .links::after {
     content: "";
     position: absolute;    
@@ -278,152 +264,25 @@ label{
     transition: width 0.4s ease-in-out, left 0.4s ease-in-out;
     transform: translateX(-50%);
 }
-.links:hover {
+
+/* Hover Style */
+/* .links:hover {
     color: #1F5EFF;
-}
-.active{
-    color:#4F7FFF;
-}
+} */
 .links:hover::after {
     width: 100%;
     left: 50%;
     transform: translateX(-50%);
 }
-#mobile-menu {
-    position: absolute;
-    top: 60px;
-    right: 0;
-    width: 100%;
-    background: #0E0E0E; 
-    text-align: center;
-    padding: 10px 0;
-    opacity: 0;
-    transform: translateY(-10px);
-    transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out, max-height 0.6s ease-in-out;
-    max-height: 0;
-    overflow: hidden;
-}
-#mobile-menu.active {
-    opacity: 0.8;
-    transform: translateY(0);
-    max-height: 400px; 
-}
-#mobile-menu ul li a {
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 10px;
-    display: block;
-    transition: color 0.5s;
-}
-#mobile-menu ul li a:hover {
+
+/* Active Style */
+.links.active {
     color: #1F5EFF;
+    
 }
-#menu-btn {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 24px;
-    padding: 5px 10px;
-    transition: transform 0.3s ease-in-out;
-}
-#menu-btn.active {
-    transform: rotate(90deg);
-}
-@media (max-width: 800px) {
-    .navelements {
-         display: none;
-     }
-     #menu-btn{
-         display: block;
-     }
- }
- 
-/*-----FOOTER SECTION-----*/
-.outfooter{
-    background-color: black;
-    margin-top: 200px;
-}
-
-.con{
-    margin-top: 30px;
-    background-color: black;
-    padding: 15px;
-    padding-top: 50px;
+.links.active::after {
     width: 100%;
-    padding-bottom: 50px;
-}
-.row{
-    display: flex;
-    flex-wrap: wrap;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-.footer-col{
-    width: 25%;
-    padding: 0 15px;
-}
-.footer-col h4{
-    font-size: 18px;
-    color: #ffffff;
-    text-transform: capitalize;
-    margin-bottom: 35px;
-    font-weight: 500;
-    position: relative;
-}
-.footer-col h4::before{
-    content: '';
-    position: absolute;
-    left:0;
-    bottom: -10px;
-   
-    height: 1px;
-    box-sizing: border-box;
-    width: 50px;
-    border: #1F5EFF solid 0.5px; 
-    box-shadow: 0 0 10px 3px #0c2666;
-}
-.footer-col ul li:not(:last-child){
-    margin-bottom: 10px;
-}
-.footer-col ul li a{
-    font-size: 16px;
-    text-transform: capitalize;
-    text-decoration: none;
-    font-weight: 300;
-    color: #bbbbbb;
-    display: block;
-    transition: all 0.3s ease;
-}
-.footer-col ul li a:hover{
-    color: #ffffff;
-    padding-left: 8px;
-}
-.footer-col .social-links a{
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    background-color: rgba(255,255,255,0.2);
-    margin:0 10px 10px 0;
-    text-align: center;
-    line-height: 40px;
-    border-radius: 50%;
-    color: #ffffff;
-    transition: all 0.5s ease;
-    background-color: #ffffff;
-}
-.footer-col .social-links a:hover{
-    color: #24262b;
-    background-color: #ffffff;
-    transform: scale(1.08);
-}
-@media(max-width: 767px){
-    .footer-col{
-        width: 50%;
-        margin-bottom: 30px;
-    }
-}
-@media(max-width: 574px){
-    .footer-col{
-        width: 100%;
-    }
-}
