--- a/styles/index.css
+++ b/styles/index.css
@@ -28,32 +28,39 @@
       border-radius: 2px;
     }
 
-    .CF-box {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin: 25px 0 10px;
-    }
 
-    .CF-box input {
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      flex: 1;
-    }
 
-    .CF-box button {
-      background-color: #1F5EFF;
-      color: white;
-      border: none;
-      padding: 10px 18px;
-      border-radius: 8px;
-      transition: 0.3s;
-    }
+.CF-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  margin: 25px 0 10px;
+}
 
-    .CF-box button:hover {
-      background-color: #336CFF;
-    }
+.CF-box input {
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  flex: 1 1 250px;
+  min-width: 200px;
+}
+
+.CF-box button {
+  background-color: #1F5EFF;
+  color: white;
+  border: none;
+  padding: 10px 18px;
+  border-radius: 8px;
+  flex: 1 1 120px;
+  min-width: 120px;
+  transition: 0.3s;
+}
+
+.CF-box button:hover {
+  background-color: #336CFF;
+}
+
 
     .description {
       text-align: center;
