--- a/styles/newserved.css
+++ b/styles/newserved.css
@@ -1,5 +1,15 @@
 
-    .form-container {
+h2 {
+  color: #2c2c2c;
+  text-align: center;
+  position: relative;
+
+  text-shadow:
+    1px 1px 1px rgba(0, 0, 0, 0.2),
+    2px 2px 2px rgba(0, 0, 0, 0.15),
+    3px 3px 3px rgba(0, 0, 0, 0.1);
+}
+  .form-container {
       max-width: 800px;
       margin: 40px auto;
       padding: 30px;
